# wrsr-calc

./: Cargo.toml  Dioxus.toml  building.csv  building.json  readme
docs/: index.html
docs/assets/dioxus/: dioxus.js  wrsr-calc.js  {{project-name}}_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
src/: main.rs
