[package]
name = "wrsr-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-logger = "0.3.0"
dioxus-web = "0.3.1"
reqwest = {version = "0.11.16", features = ["blocking", "json"]}
serde = "1.0.160"
serde_json = "1.0.96"
